--- a/synthesis/lab2/top_summary.html
+++ b/synthesis/lab2/top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>top Project Status (03/12/2019 - 10:02:35)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>top Project Status (03/15/2019 - 10:04:46)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>lab2.xise</TD>
@@ -25,7 +25,7 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.6</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/*.xmsgs?&DataKey=Warning'>46 Warnings (37 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/*.xmsgs?&DataKey=Warning'>51 Warnings (47 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -60,19 +60,19 @@ System Settings</A>
 <TD ALIGN=LEFT><B>Slice Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Registers</TD>
-<TD ALIGN=RIGHT>105</TD>
+<TD ALIGN=RIGHT>107</TD>
 <TD ALIGN=RIGHT>54,576</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>105</TD>
+<TD ALIGN=RIGHT>106</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Latches</TD>
-<TD ALIGN=RIGHT>0</TD>
+<TD ALIGN=RIGHT>1</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -102,7 +102,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O6 output only</TD>
-<TD ALIGN=RIGHT>122</TD>
+<TD ALIGN=RIGHT>120</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -114,7 +114,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Number using O5 and O6</TD>
-<TD ALIGN=RIGHT>74</TD>
+<TD ALIGN=RIGHT>76</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -192,7 +192,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>124</TD>
+<TD ALIGN=RIGHT>123</TD>
 <TD ALIGN=RIGHT>6,822</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -204,50 +204,50 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of LUT Flip Flop pairs used</TD>
-<TD ALIGN=RIGHT>315</TD>
+<TD ALIGN=RIGHT>314</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused Flip Flop</TD>
-<TD ALIGN=RIGHT>213</TD>
-<TD ALIGN=RIGHT>315</TD>
-<TD ALIGN=RIGHT>67%</TD>
+<TD ALIGN=RIGHT>210</TD>
+<TD ALIGN=RIGHT>314</TD>
+<TD ALIGN=RIGHT>66%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number with an unused LUT</TD>
-<TD ALIGN=RIGHT>9</TD>
-<TD ALIGN=RIGHT>315</TD>
+<TD ALIGN=RIGHT>8</TD>
+<TD ALIGN=RIGHT>314</TD>
 <TD ALIGN=RIGHT>2%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of fully used LUT-FF pairs</TD>
-<TD ALIGN=RIGHT>93</TD>
-<TD ALIGN=RIGHT>315</TD>
-<TD ALIGN=RIGHT>29%</TD>
+<TD ALIGN=RIGHT>96</TD>
+<TD ALIGN=RIGHT>314</TD>
+<TD ALIGN=RIGHT>30%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of unique control sets</TD>
-<TD ALIGN=RIGHT>15</TD>
+<TD ALIGN=RIGHT>16</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of slice register sites lost<BR>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;to control set restrictions</TD>
-<TD ALIGN=RIGHT>78</TD>
+<TD ALIGN=RIGHT>84</TD>
 <TD ALIGN=RIGHT>54,576</TD>
 <TD ALIGN=RIGHT>1%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>32</TD>
+<TD ALIGN=RIGHT>35</TD>
 <TD ALIGN=RIGHT>358</TD>
-<TD ALIGN=RIGHT>8%</TD>
+<TD ALIGN=RIGHT>9%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of LOCed IOBs</TD>
-<TD ALIGN=RIGHT>32</TD>
-<TD ALIGN=RIGHT>32</TD>
+<TD ALIGN=RIGHT>35</TD>
+<TD ALIGN=RIGHT>35</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
@@ -432,7 +432,7 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.23</TD>
+<TD ALIGN=RIGHT>3.22</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -469,21 +469,21 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>uto 12. mar 10:01:28 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/xst.xmsgs?&DataKey=Warning'>41 Warnings (36 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/xst.xmsgs?&DataKey=Info'>55 Infos (55 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top.bld'>Translation Report</A></TD><TD>Current</TD><TD>uto 12. mar 10:01:33 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>2 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>uto 12. mar 10:01:45 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/map.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/map.xmsgs?&DataKey=Info'>7 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>uto 12. mar 10:01:54 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/par.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>pet 15. mar 10:04:01 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/xst.xmsgs?&DataKey=Warning'>44 Warnings (44 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/xst.xmsgs?&DataKey=Info'>40 Infos (40 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top.bld'>Translation Report</A></TD><TD>Current</TD><TD>pet 15. mar 10:04:06 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>2 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>pet 15. mar 10:04:18 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/map.xmsgs?&DataKey=Warning'>2 Warnings (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/map.xmsgs?&DataKey=Info'>7 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top.par'>Place and Route Report</A></TD><TD>Current</TD><TD>pet 15. mar 10:04:27 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/par.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/par.xmsgs?&DataKey=Info'>3 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>uto 12. mar 10:01:59 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/trce.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>uto 12. mar 10:02:09 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>pet 15. mar 10:04:32 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/trce.xmsgs?&DataKey=Warning'>1 Warning (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/trce.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\top.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>pet 15. mar 10:04:41 2019</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>1 Warning (1 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\_xmsgs/bitgen.xmsgs?&DataKey=Info'>1 Info (0 new)</A></TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>uto 12. mar 10:02:09 2019</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>uto 12. mar 10:02:35 2019</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>pet 15. mar 10:04:42 2019</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/CDarko/lab2/synthesis/lab2\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>pet 15. mar 10:04:45 2019</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/12/2019 - 10:02:35</center>
+<br><center><b>Date Generated:</b> 03/15/2019 - 10:04:46</center>
 </BODY></HTML>
